Fixed the gap issues on both the css files by setting it true to size

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
-body{
-    font-family: Arial, sans-serif;
-    background-color: hsl(0, 0%, 0%);
-} 
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  font-family: Arial, sans-serif;
+  background-color: hsl(0, 0%, 0%);
+}
 
 h1{
     color: hsl(199, 92%, 61%);
